Bug 100260 - GSoC - New Template Manager: Cannot open context menu without mouse
Summary: GSoC - New Template Manager: Cannot open context menu without mouse
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Akshay Deep
URL:
Whiteboard: target:5.3.0 target:5.2.0.1
Keywords: accessibility
Depends on:
Blocks: Template-Manager
  Show dependency treegraph
 
Reported: 2016-06-07 15:28 UTC by Regina Henschel
Modified: 2016-08-10 16:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2016-06-07 15:28:11 UTC
I've got Version: 5.3.0.0.alpha0+
Build ID: 397ad4d4b844d0c1a24fceb20cde460554b9910f
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-06-07_05:23:30
Locale: de-DE (de_DE)

Goto File > New > Templates. Press Tab-Key until you have highlighted a template. Press Context-menu key on keyboard (on Windows 7).
Expected behavior: Context menu of the highlighted item is shown.
Noticed behavior: Nothing happens.

Same failure with Shift-F10, which is LibreOffice's own short cut for context menu.

That means, you cannot get the context menu without mouse. That is a large problem, because some actions are _only_ available via context menu.
Comment 1 Akshay Deep 2016-06-09 03:25:51 UTC
Create context menu using (Shift + F10) shortcut

https://gerrit.libreoffice.org/#/c/26082/
Comment 2 Commit Notification 2016-06-09 12:42:53 UTC
Akshay Deep committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=40ca34340e4b387bdce92b86cb572556c5437c7d

tdf#100260 Template Manager: Cannot open context menu without mouse

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2016-06-09 12:45:22 UTC
Akshay Deep committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=62f70c3f75bcf7b554cf3e18017ee690820636aa&h=libreoffice-5-2

tdf#100260 Template Manager: Cannot open context menu without mouse

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Akshay Deep 2016-06-10 23:26:36 UTC
With the above merged changes and the merged changes mentioned in this comment, the issue is resolved :)

https://gerrit.libreoffice.org/#/c/26044/

https://gerrit.libreoffice.org/#/c/26178/
Comment 5 Regina Henschel 2016-06-11 16:58:36 UTC
Verified with Version: 5.3.0.0.alpha0+
Build ID: bb6acbd0c3e8240c976ed62e04275ec67fa5a61d
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-06-11_00:27:38
Locale: de-DE (de_DE)