tdf#100260 Template Manager: Cannot open context menu without mouse

Change-Id: I900cc79e2834c1942840ee9fb1a8ab680b646c92
Reviewed-on: https://gerrit.libreoffice.org/26082
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>