include/sfx2/templateabstractview.hxx
@@ -97,7 +97,7 @@ public:
 
     void setOpenRegionHdl(const Link<void*,void> &rLink);
 
-    void setRightClickHdl(const Link<ThumbnailViewItem*,void> &rLink);
+    void setCreateContextMenuHdl(const Link<ThumbnailViewItem*,void> &rLink);
 
     void setOpenTemplateHdl(const Link<ThumbnailViewItem*,void> &rLink);
 
@@ -140,7 +140,7 @@ protected:
     Point maPosition;
 
     Link<void*,void>              maOpenRegionHdl;
-    Link<ThumbnailViewItem*,void> maRightClickHdl;
+    Link<ThumbnailViewItem*,void> maCreateContextMenuHdl;
     Link<ThumbnailViewItem*,void> maOpenTemplateHdl;
     Link<ThumbnailViewItem*,void> maEditTemplateHdl;
     Link<ThumbnailViewItem*,void> maDeleteTemplateHdl;
